update grunt template

--- a/root/index.html
+++ b/root/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title></title>
+<title>grunt-smart-build</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
 <meta name="apple-touch-fullscreen" content="yes" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <meta name="format-detection" content="telephone=no" />
-<?php include "../_inc.php"; ?>
-<link rel="stylesheet" href="assets/css/style.min.css?v=<?=$version?>" />
+<!-- build:css assets/css/style.min.css -->
+<link rel="stylesheet" href="assets/css/style.source.css" />
+<!-- endbuild -->
 </head>
 <body>
-<div class="sm-app">
-    <!-- Todo something! -->
+<div class="ui-app">
+    <div class="main-hd"></div>
+    <div class="main-bd"></div>
+    <div class="main-ft"></div>
 </div>
-<!-- load script -->
-<script type="text/javascript" src="assets/js/main.min.js?v=<?=$version?>"></script>
-<!-- /load script -->
+<!-- build:js assets/js/main.min.js -->
+<script type="text/javascript" src="assets/js/main.source.js?v=version"></script>
+<!-- endbuild -->
 </body>
 </html>
