--- a/root/index.html
+++ b/root/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>grunt-smart-build</title>
+<title>grunt-init-smart</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
 <meta name="apple-touch-fullscreen" content="yes" />
