--- a/root/index.html
+++ b/root/index.html
@@ -18,6 +18,13 @@
     <div class="main-bd"></div>
     <div class="main-ft"></div>
 </div>
+<!-- build:js assets/js/zepto.min.js -->
+<script type="text/javascript" src="bower_components/zeptojs/src/zepto.js"></script>
+<script type="text/javascript" src="bower_components/zeptojs/src/event.js"></script>
+<script type="text/javascript" src="bower_components/zeptojs/src/touch.js"></script>
+<script type="text/javascript" src="bower_components/zeptojs/src/ajax.js"></script>
+<script type="text/javascript" src="bower_components/zeptojs/src/data.js"></script>
+<!-- endbuild -->
 <!-- build:js assets/js/main.min.js -->
 <script type="text/javascript" src="assets/js/main.source.js?v=version"></script>
 <!-- endbuild -->
